[package]
name = "penazenka"
version = "0.1.0"
authors = ["join3r <join3r@gmail.com>"]
edition = "2018"
license = "CC-BY-NC-ND-4.0"

[dependencies]
structopt = "^0.2"

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 16
panic = "abort"
incremental = false
overflow-checks = true
